[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xayz"
version = "0.1.0"
description = "A utility tool for many things."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.mypy]
check_untyped_defs = true

[tool.setuptools]
packages = [
    "xayz",
    "xayz.queue"]
include-package-data = true

[tool.setuptools.package-data]
"xayz" = ["py.typed"]